--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
     />
 
-    <title>React App</title>
+    <title>Knowledge Tour - Blogging Platform</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
